--- a/index.html
+++ b/index.html
@@ -9,16 +9,23 @@
     <script defer src="javascript.js"></script>
 </head>
 <body>
+    <header></header>
     <div class = "form-container">
         <form>
         <input type= "text" id= "weather-search" name= "weather-search" value="">
         <button type= "submit" id = "submitButton">SEARCH</button>
         </form>
         </div>
-        <div id = 'temperature'></div>
-        <div class= "checkBox">
-              <input id= "getWeatherF" type= "checkbox">       
+        <div class = "results-container">
+            <div id = "city-and-country">Mentor, US</div>
+            <div id = 'temperature'>20</div>
+            <div id = "details">Overcast clouds</div>
+            <div id = "feels-like">19C</div>
+            <div class= "checkBox">
+                <input id= "getWeatherF" type= "checkbox">       
+          </div>
         </div>
+        <footer>Made by GabrielCRO</footer>
 </div>
 </body>
 </html>
