--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
             <div id = 'temperature'>20</div>
             <div id = "details">Overcast clouds</div>
             <div id = "feels-like">19C</div>
-            <div class= "checkBox">
+            <div class= "checkBox"> 
                 <input id= "getWeatherF" type= "checkbox">       
           </div>
         </div>
-        <footer>Made by GabrielCRO</footer>
+        <footer>Made by GabrielCRO - weather API from<a href="https://openweathermap.org/api"> openweathermap</a></footer>
 </div>
 </body>
 </html>
