--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles.css">
     <script defer src="javascript.js"></script>
 </head>
-<body>
+<body>  
     <header></header>
     <div class = "form-container">
         <form>
@@ -17,15 +17,16 @@
         </form>
         </div>
         <div class = "results-container">
-            <div id = "city-and-country">Mentor, US</div>
-            <div id = 'temperature'>20</div>
-            <div id = "details">Overcast clouds</div>
-            <div id = "feels-like">19C</div>
+            <div id = "city"></div>
+            <div id = "country"></div>
+            <div id = 'temperature'></div>
+            <div id = "details"></div>
+            <div id = "feels-like"></div>
             <div class= "checkBox"> 
                 <input id= "getWeatherF" type= "checkbox">       
           </div>
         </div>
-        <footer>Made by GabrielCRO - weather API from<a href="https://openweathermap.org/api"> openweathermap</a></footer>
+        <footer>Gabriel Hrastovic 2022<a href="https://Openweathermap.org/api"> Openweathermap</a> <a href="https://github.com/luciopaiva/country-flags"> Github </a></footer>
 </div>
 </body>
 </html>
