--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>  
     <header></header>
     <div class = "form-container">
-        <form>
+        <form action="">
         <input type= "text" id= "weather-search" name= "weather-search" value="">
         <button type= "submit" id = "submitButton">SEARCH</button>
         </form>
