--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 <body>  
     <header></header>
+    <div class = "loader">
+        <div class="spinner spinner-large spinner-slow"></div>
+        </div>
     <div class = "form-container">
         <form action="">
         <input type= "text" id= "weather-search" name= "weather-search" value="">
@@ -27,6 +30,6 @@
           </div>
         </div>
         <footer>Gabriel Hrastovic 2022<a href="https://Openweathermap.org/api"> Openweathermap</a> <a href="https://github.com/luciopaiva/country-flags"> Github </a></footer>
-</div>
+
 </body>
 </html>
